--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       background-size: cover; 
       background-position: center; 
       background-repeat: no-repeat; 
+      display: flex;
+      align-items: center; 
+      justify-content: center;
+    }
+    a {
+      margin: 0 10px;
     }
     meta[name="theme-color"] {
       display: none;
