--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       display: flex;
       align-items: center; 
       justify-content: center;
+      height: 100vh;
     }
     a {
       margin: 0 10px;
