--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
       background-position: center; 
       background-repeat: no-repeat; 
       display: flex;
-      
+      align-items: center; 
       justify-content: center;
       height: 100vh;
     }
     a {
       margin: 0 10px;
       margin: 8px 0;
+      align-self: flex-end;
     }
     meta[name="theme-color"] {
       display: none;
