--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
       height: 100vh;
     }
     a {
-      margin: 0 10px;
-      margin: 8px 0;
-      align-self: flex-end;
+       margin: 10px ;
+      
     }
     meta[name="theme-color"] {
       display: none;
