--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       height: 100vh;
     }
     a {
-       margin: 8px 8px 10px 10px ;
+       margin: 8px 50px  ;
       
     }
     meta[name="theme-color"] {
