--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       height: 100vh;
     }
     a {
-       margin: 8px 50px ;
+       margin: 8px 0px 40px ;
       
     }
     meta[name="theme-color"] {
