--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <h1>TukoDev</h1>
+  <h1>TukoDev</h1>{
+      font-size: 48px;
+      color: blue;
+    }
   <title>Welcome To TukoDev</title>
   <style>
     ion-icon {
