--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <h1>TukoDev</h1>{
-      font-size: 48px;
-      color: blue;
-    }
+  <h1>TukoDev</h1>
   <title>Welcome To TukoDev</title>
   <style>
     ion-icon {
@@ -25,7 +22,7 @@
       height: 100vh;
     }
     a {
-       margin: 8px 8px 80px ;
+       margin: 8px 8px 120px ;
       
     }
     meta[name="theme-color"] {
