--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </style>
 </head>
 <body>
+  <div class="center-text">
+    <p>TukoDev</p>
+  </div>
    <a href="https://github.com/tukoDev">
 <ion-icon name="logo-github"></ion-icon> 
   </a>
