--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       align-items: center; 
       justify-content: center;
       height: 100vh;
+      flex-direction: column;
+    }
+    .center-text {
+      text-align: center;
+      color: white;
+      font-size: 76px; 
+      margin-top: 50px; 
     }
     a {
        margin: 8px 8px 180px ;
