--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       text-align: center;
       color: white;
       font-size: 76px; 
-      margin-top: 150px; 
+      margin-top: 10px 25px; 
     }
     a {
        margin: 8px 8px 180px ;
