--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       justify-content: center;
       height: 100vh;
     }
-    .center-text {
+    body p {
       text-align: center;
-      color: white;
+      color: blue;
       font-size: 76px; 
       margin-top: 10px 25px; 
     }
@@ -36,9 +36,7 @@
   </style>
 </head>
 <body>
-  <div class="center-text">
     <p>TukoDev</p>
-  </div>
    <a href="https://github.com/tukoDev">
 <ion-icon name="logo-github"></ion-icon> 
   </a>
