--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     body p {
       color: blue;
       font-size: 76px; 
-      margin-top: 10px 25px; 
+      margin-bottom: 10px;
     }
     a {
        margin: 8px 8px 180px ;
