--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       justify-content: center;
       height: 100vh;
     }
+    h1 {
+      color: white;
+      font-size: 60px; 
+      margin-bottom: 20px; 
+    }
     a {
        margin: 8px 8px 180px ;
     }
@@ -29,6 +34,7 @@
   </style>
 </head>
 <body>
+  <h1>TukoDev</h1>
    <a href="https://github.com/tukoDev">
 <ion-icon name="logo-github"></ion-icon> 
   </a>
