--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       height: 100vh;
     }
     h1 {
-      color: yellow;
+      color: blue;
       font-size: 60px; 
-      margin-bottom: 380px 60px; 
+      margin-bottom: 380px 60px 40px 80px; 
     }
     a {
        margin: 8px 8px 180px ;
