--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     h1 {
       color: blue;
       font-size: 60px; 
-      margin-bottom: 380px 60px 40px 80px; 
+      margin-bottom: 380px;
+      margin-left: 90px;
     }
     a {
        margin: 8px 8px 180px ;
