--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     h1 {
       color: blue;
       font-size: 60px; 
-      margin-bottom: 380px;
-      margin-left: 90px;
+      text-align: center;
     }
     a {
        margin: 8px 8px 180px ;
