--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0; 
       padding: 0;
-      background-image: url('https://images.pexels.com/photos/1402787/pexels-photo-1402787.jpeg?cs=srgb&dl=pexels-vlad-alexandru-popa-1402787.jpg&fm=jpg&w=1920&h=1280');
+      background-image: url('https://wallpapercave.com/wp/wp10602707.jpg');
       background-size: cover; 
       background-position: center; 
       background-repeat: no-repeat; 
