--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <ion-icon name="logo-youtube"></ion-icon>
   </a>
   <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3">
-    <i class="fa-brands fa-spotify"></i>
+    <ion-icon class="fa-brands fa-spotify"></ion-icon>
   </a>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
