--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <ion-icon name="logo-youtube"></ion-icon>
   </a>
   <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3">
-    <ion-icon name="logo-spotify"></ion-icon>
-  </a>
+    <i class="fab fa-spotify"></i>
+</a>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
