--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+  <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+</head>
 <head>
   <meta charset="UTF-8">
   <title>Welcome To TukoDev</title>
