--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     a {
        margin: 8px 8px 180px ;
     }
+    a {
+  margin: 0 8px;
+}
     meta[name="theme-color"] {
       display: none;
     }
