--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 </head>
 <body>
   <a href="https://github.com/tukoDev">
-<ion-icon name="logo-github"></ion-icon> 
+  <ion-icon class="fa-brands fa-github"></ion-icon> 
   </a>
   <a href="https://www.instagram.com/tukocde/">
-    <ion-icon name="logo-instagram"></ion-icon>
+    <ion-icon class="fa-brands fa-instagram"></ion-icon>
   </a>
   <a href="https://www.youtube.com/channel/UCwf7sJelCZ94unEU8QOApCQ">
-    <ion-icon name="logo-youtube"></ion-icon>
+    <ion-icon class="fa-brands fa-youtube"></ion-icon>
   </a>
   <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3">
     <ion-icon class="fab fa-spotify"></ion-icon>
