--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>Welcome To TukoDev</title>
   <style>
-    ion-icon {
+    i {
       font-size: 76px;
       color: green;
     }
@@ -33,18 +33,16 @@
 </head>
 <body>
   <a href="https://github.com/tukoDev">
-  <ion-icon class="fa-brands fa-github"></ion-icon> 
+    <i class="fab fa-github"></i>
   </a>
   <a href="https://www.instagram.com/tukocde/">
-    <ion-icon class="fa-brands fa-instagram"></ion-icon>
+    <i class="fab fa-instagram"></i>
   </a>
   <a href="https://www.youtube.com/channel/UCwf7sJelCZ94unEU8QOApCQ">
-    <ion-icon class="fa-brands fa-youtube"></ion-icon>
+    <i class="fab fa-youtube"></i>
   </a>
   <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3">
-    <ion-icon class="fab fa-spotify"></ion-icon>
-</a>
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <i class="fab fa-spotify"></i>
+  </a>
 </body>
 </html>
