--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   </style>
 </head>
 <body>
-  <a href="https://github.com/tukoDev">
+  <a href="https://github.com/tukoDev" target="_blank">
     <i class="fab fa-github"></i>
   </a>
-  <a href="https://www.youtube.com/channel/UCwf7sJelCZ94unEU8QOApCQ">
+  <a href="https://www.youtube.com/channel/UCwf7sJelCZ94unEU8QOApCQ" target="_blank">
     <i class="fab fa-youtube"></i>
   </a>
-  <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3">
+  <a href="https://open.spotify.com/playlist/7sL9f9YfXudvEXpKBgBRRE?si=ee8dbd23b4114ab3" target="_blank">
     <i class="fab fa-spotify"></i>
   </a>
 </body>
